--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,18 @@
-.App {
+body{
+  background-color: rgb(226, 239, 251);
+}
+.header{
+  background-color: white;
+  height: 70px;
+  margin: 0;
+  border-top: 2px solid rgb(0, 106, 255);
+  display: grid;
+  grid-template-columns: repeat(6,1fr);
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.header h1{
+  color:rgb(0, 106, 255) ;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.header h1:not(:last-child){
+  border-right: 2px solid rgb(0, 85, 255);
 }
